# redis-decorator-generator

./: .gitignore  .pre-commit-config.yaml  CICD.md  CONTRIBUTING.md  LICENSE.md  README.md  RELEASING.md  noxfile.py  pyproject.toml  requirements.txt  test-requirements.in  test-requirements.txt
.github/workflows/: deploy.yaml  pull_request.yaml
examples/: cli.py
examples/fastapi_example/: app.py  extensions.py  settings.py
examples/flask_example/: app.py  extensions.py  settings.py
redis_decorator_generator/: __init__.py
redis_decorator_generator/classes/: redis.py
tests/: conftest.py  test_redis_client.py
