[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "redis-decorator"
dynamic = ["version"]
description = "Class and decorator to use with Redis"
authors = [
  { name = "Brian Metzler", email = "baldie@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.12"
dependencies = [
  "redis",
]
homepage = "https://github.com/bkmetzler/redis-decorator"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "redis_decorator/version.py"

[tool.black]
line-length = 120
target-version = ['py312']
extend-exclude = "redis_decorator/version.py"

[tool.mypy]
python_version = "3.12"
exclude = [
  "tests",
]
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
ignore_missing_imports = true
disallow_untyped_defs = true


[[tool.mypy.overrides]]
module = [
  "tests",
]
ignore_missing_imports = true

[tool.pytest_env]
UNIT_TEST = true


[tool.flake8]
max-line-length = 120
per-file-ignores = """
    tests/*/fixtures/*.py: E501
    redis_decorator/version.py: F401
"""


[tool.hatch.envs.dev]
dependencies = [
  "pytest",
  "black",
  "mypy",
  "ruff",
  "coverage",
  "pre-commit",
  "fakeredis"
]
